--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "name": "saga-splash",
+  "jest": {
+    "coverageReporters": [
+      "text",
+      "html"
+    ]
+  },
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,11 +20,17 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test --coverage --coverageDirectory=output/coverage/jest",
+    "jtest": "jest --coverage --coverageDirectory=output/coverage/jest",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "prettier": "^1.14.0"
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "jest-cli": "^24.8.0",
+    "jest-enzyme": "^7.0.2",
+    "prettier": "^1.14.0",
+    "react-axe": "^3.2.0"
   },
   "browserslist": {
     "production": [
